--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
       src="https://kit.fontawesome.com/eb22379432.js"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js" defer></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+    (function(){
+        emailjs.init("eN39bcplZqWhI2ywk");
+    })();
+    </script>
   </head>
   <body>
     <section id="landing-page">
@@ -105,18 +114,18 @@
             <h3 class="modal__sub-title modal__sub-title--contact">
                 I'm currently open to new opportunities.
             </h3>
-            <form id="contact__form" action="">
+            <form id="contact__form" onsubmit="contact(event)">
                 <div class="form__item">
                     <label class="form__item--label">Name</label>
-                    <input class="input" name="user__name" type="text" required></input>
+                    <input class="input" name="user_name" type="text" required></input>
                 </div>
                 <div class="form__item">
                     <label class="form__item--label">Email</label>
-                    <input class="input" name="user__email" type="email" required></input>
+                    <input class="input" name="user_email" type="email" required></input>
                 </div>
                 <div class="form__item">
                     <label class="form__item--label">Message</label>
-                    <textarea class="input" name="message" type="text" required></textarea>
+                    <textarea class="input" name="message" type="text"></textarea>
                 </div>
                 <button id="contact__submit" class="form__submit">
                     Send it my way
