--- a/index.html
+++ b/index.html
@@ -15,34 +15,35 @@
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     </script>
     <script type="text/javascript">
-    (function(){
-        emailjs.init("eN39bcplZqWhI2ywk");
-    })();
+        (function(){
+            emailjs.init("eN39bcplZqWhI2ywk");
+        })();
     </script>
   </head>
+
   <body>
-    <section id="landing-page">
+    <section id="landing-page" onmousemove="moveBackground(event)">
       <nav>
         <figure>
           <img id="personal-logo" src="./assets/logo.svg" alt="" />
         </figure>
         <ul class="nav__link--list">
-          <li class="nav__link">
+          <li class="nav__link" onclick="toggleModal()">
             <a href="#" class="nav__link--anchor link__hover-effect link__hover-effect--black">
               About
             </a>
           </li>
           <li class="nav__link">
-            <a href="#" class="nav__link--anchor link__hover-effect link__hover-effect--black">
+            <a href="#projects" class="nav__link--anchor link__hover-effect link__hover-effect--black">
               Project
             </a>
           </li>
-          <li class="nav__link">
+          <li class="nav__link" onclick="toggleModal()">
             <a href="#" class="nav__link--anchor link__hover-effect link__hover-effect--black">
               Contact
             </a>
           </li>
-          <li class="nav__link click">
+          <li class="nav__link click" onclick="toggleContrast()">
             <a href="#" class="nav__link--anchor link__hover-effect link__hover-effect--black">
               <i class="fa-solid fa-circle-half-stroke"></i>
             </a>
@@ -58,7 +59,7 @@
             a strong passion for building web applications with great user
             experiences.
             <br />
-            Here's a bit more <b class="green">about me.</b>
+            Here's a bit more <b class="green click" onclick="toggleModal()">about me.</b>
           </p>
           <div class="social__list">
             <a href="#" class="social__link click">
@@ -73,9 +74,11 @@
           </div>
         </div>
       </header>
-      <button class="mail__btn click">
-        <i class="fa-solid fa-envelope"></i>
-      </button>
+      <a href="#">
+          <button class="mail__btn click" onclick="toggleModal()">
+            <i class="fa-solid fa-envelope"></i>
+          </button>
+      </a>
       <a href="#projects" class="scroll">
         <div class="scroll__icon click"></div>
       </a>
@@ -108,6 +111,7 @@
             </div>
         </div>
         <div class="modal__half modal__contact">
+            <i class="fas fa-times modal__exit click" onclick="toggleModal()"></i>
             <h3 class="modal__title modal__title--contact">
                 Let's have a chat!
             </h3>
@@ -138,8 +142,16 @@
                 Thanks for the message! Looking forward to connecting with you soon. 
             </div>
         </div>
-        <i class="fas fa-times modal__exit click"></i>
       </div>
+      <img src="./assets/semi circle.svg" class="shape shape--0">
+      <img src="./assets/circle.svg" class="shape shape--1">
+      <img src="./assets/squiggly.svg" class="shape shape--2">
+      <img src="./assets/circle.svg" class="shape shape--3">
+      <img src="./assets/triangle.svg" class="shape shape--4">
+      <img src="./assets/circle.svg" class="shape shape--5">
+      <img src="./assets/squiggly.svg" class="shape shape--6">
+      <img src="./assets/circle.svg" class="shape shape--7">
+      <img src="./assets/semi circle.svg" class="shape shape--8">
     </section>
 
     <section id="projects">
@@ -236,16 +248,16 @@
                     <img class="footer__logo--img" src="./assets/logo.svg" alt="">
                 </figure>
                 <div class="footer__social--list">
-                    <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+                    <a href="https://github.com/tnsquared" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white">
                         Github
                     </a>
-                    <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+                    <a href="#" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white">
                         LinkedIn
                     </a>
-                    <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+                    <a href="#" onclick="toggleModal()" class="footer__social--link link__hover-effect link__hover-effect--white">
                         Contact
                     </a>
-                    <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+                    <a href="./assets/David Bragg Resume.pdf" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white">
                         Resume
                     </a>
                 </div>
